# AdventOfCode

./: .gitignore  README.md
aoc2022/: CMakeLists.txt
aoc2022/include/: lib.h  tmp_lib.h
aoc2022/inputs/: 1.i  10.in  11.in  12.in  14.in  15.in  5.in  7.in  8.in
aoc2022/src/: day1.cpp  day10.cpp  day10p2.cpp  day11.cpp  day11s.cpp  day12.cpp  day12p2.cpp  day13.cpp  day13p2.cpp  day14.cpp  day14p2.cpp  day15.cpp  day15p2.cpp  day16.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  day9p1.cpp  lib.cpp  main.cpp  sol1.cpp  sol16.cpp  sol17.cpp
aoc2023/: Cargo.toml
aoc2023/inputs/: 01.in  02.in
aoc2023/src/: 10.txt  24.tex  grid.rs  lib.rs  main.rs
aoc2023/src/iotest/: generate.cpp  main.cpp  main.rs  main_slow.rs
aoc2023/src/py/: 01.py  02.py  02_2.py  03.py  03_1.py  04.py  04_1.py  05.py  05_1.py  06.py  06_1.py  07.py  07_1.py  08.py  08_1.py  09.py  09_1.py  10.py  11.py  12.py  12_1.py  13.py  13_1.py  14.py  15.py  16.py  16_1.py  18.py  18_1.py  19.py  19_1.py  20.py  20_1.py  21.py  21_1.py  22.py  22_1.py  23.py  23_1.py  24.py  (+2 more)
aoc2025/: Cargo.toml  build.sh  flake.nix
aoc2025/doc/: local_label.py  notes.md
aoc2025/src/: 1.ll  2.ll  lib.ll
