[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"
default-run = "aoc2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4.2"
bnum = "0.10.0"
cached = { version = "0.46.1", features = ["ahash"] }
counter = "0.5.7"
num-rational = "0.4.1"
num-traits = "0.2.17"

# main.rs
once_cell = "1.18.0"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.2"
rustc-hash = "1.1.0"
